Rapport non fini

--- a/Rapport/bibliography.bib
+++ b/Rapport/bibliography.bib
@@ -1,17 +1,90 @@
 @misc{955,
-author = {Miller, Andrew and Bentov, Iddo},
-year = {2017},
-month = {04},
-title = {Zero-Collateral Lotteries in Bitcoin and Ethereum}
+author = "Massimo Bartoletti, Roberto Zunino",
+title = "Constant-deposit multiparty lotteries on Bitcoin",
 url = "https://eprint.iacr.org/2016/955.pdf"
 }
 
 @url{bcfr,
-title = {Blockchain France}
-url = https://blockchainfrance.net/decouvrir-la-blockchain/c-est-quoi-la-blockchain/
+title = {Découvrir la blockchain},
+author="Blockchain France",
+url = "https://blockchainfrance.net/decouvrir-la-blockchain/c-est-quoi-la-blockchain/"
 }
 
 @url{7x7,
-title = {Comprendre la technologie blockchain}
+title = {Comprendre la technologie blockchain},
+author={7x7},
 url = https://www.7x7.press/7-questions-pour-enfin-comprendre-la-technologie-blockchain
+}
+
+@url{
+title = {Bitocin c'est quoi},
+url = "https://bitcoin.fr/qu-est-ce-que-bitcoin/",
+}
+
+@url{bcfr-smart,
+title = {Smart contracts : définition et applications},
+author="Blockchain France",
+url = "https://blockchainfrance.net/2016/01/28/applications-smart-contracts/"
+}
+
+@url{smartdeloitte,
+title="A quoi servent les smart contracts",
+author="Deloitte France",
+url=https://equationdelaconfiance.fr/decryptage/mais-quoi-servent-les-smart-contracts
+}
+
+@url{ethercontract,
+title = {Ethereum : « Smart contract », où le contrat auto-exécutant},
+url="https://www.ethereum-france.com/smart-contract-ou-le-contrat-auto-executant/"
+}
+
+@url{ryxhash,
+title = "Les fonctions de hachage cryptographique",
+author = "Ryx",
+url="https://zestedesavoir.com/tutoriels/1895/les-fonctions-de-hachage-cryptographiques/"
+}
+
+@url{tamarin,
+title = "Tamarin Prover",
+author="David Basin, Cas Cremers, Jannik Dreier, Simon Meier, Ralf Sasse, Benedikt Schmidt"
+url="http://tamarin-prover.github.io/"
+}
+@misc{cryptohash,
+title = "Fonctions de hachage",
+author = "Jannik Dreier, E. Thomé",
+}
+
+@url{wikihash,
+title = "Fonction de hachage cryptographique",
+author="Wikipedia"
+url="https://fr.wikipedia.org/wiki/Fonction_de_hachage_cryptographique"
+}
+
+@url{wikiasym,
+title = "Cryptographie asymétrique",
+author="Wikipedia"
+url="https://fr.wikipedia.org/wiki/Cryptographie_asym%C3%A9trique"
+}
+
+@url{clepub,
+title = "Chiffrement à clé publique",
+author = "Cryptage",
+url = "http://www.cryptage.org/cle-publique.html"
+}
+
+@url{ccmasym,
+title = "Les systèmes à clé publique",
+author = "CommentCaMarche.net",
+url = "https://www.commentcamarche.com/contents/201-les-systemes-a-cle-publiques"
+
+@url{igmsign,
+title = "La signature numérique",
+author = "IGM Université de Marne La Vallée",
+url = "http://www-igm.univ-mlv.fr/~dr/XPOSE2006/depail/fonctionnement.html"
+}
+
+@url{vivacite,
+title = "Vivacite (informatique)",
+author = "Wikipedia",
+url = "https://fr.wikipedia.org/wiki/Vivacité_(informatique)"
 }
